# mlops_hw1

./: .gitignore  README.md  dashboard_gradio.py  grpc_client.py  grpc_server.py  main.py  ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py  pyproject.toml
